<resources>
    <string name="app_name">WilderCards</string>
    <string name="default_web_client_id">YOUR-WEB-CLIENT-ID.apps.googleusercontent.com</string>
    <string name="background_image_description">Background image with a forest theme</string>
    <string name="login_email_hint">Wildercards@example.com</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button_text">Log In</string>
    <string name="google_sign_in_description">Google sign in</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login_signup_link">Dont\'t have an account? Sign Up</string>
    <string name="forgot_password_email_hint">Enter your email</string>
    <string name="forgot_password_reset_button">Reset Password</string>
    <string name="signup_title">Sign Up</string>
    <string name="signup_name_hint">Name</string>
    <string name="signup_username_hint">Username</string>
    <string name="signup_age_hint">Age</string>
    <string name="signup_email_hint">your.email@example.com</string>
    <string name="signup_password_hint">Password</string>
    <string name="signup_confirm_password_hint">Confirm Password</string>
    <string name="signup_button_text">Sign Up</string>
    <string name="signup_login_link_text">Already have an account? Log in</string>
    <string name="loading">Loading...</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="login_title">Log In</string>
    <string name="login_with_divider">Log in with</string>
    <string name="email_hint">Email</string>
    <string name="no_image_selected">No image selected</string>
    <string name="identifying">Identifying...</string>
    <string name="error_identifying_image">Error identifying image</string>
    <string name="api_call_failed">API call failed. Check network.</string>
    <string name="api_error">API Error: %d</string>
    <string name="identified">Identified: %s</string>
    <string name="could_not_identify">Could not identify animal.</string>
    <string name="error_parsing_results">Error parsing results.</string>
    <string name="confirm_image_title">Confirm Image</string>
    <string name="selected_image_description">Selected Image</string>
    <string name="confirm_and_identify_button">Confirm and Identify</string>
</resources>