<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0D1110"
    android:padding="16dp"
    tools:context=".ConfirmImageActivity">

    <TextView
        android:id="@+id/pageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/confirm_image_title"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/ivSelectedImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/btnConfirm"
        android:layout_below="@id/pageTitle"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="33dp"
        android:contentDescription="@string/selected_image_description"
        android:scaleType="fitCenter" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:text="@string/confirm_and_identify_button"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:backgroundTint="#00FF7F"
        app:cornerRadius="30dp"
        android:padding="12dp"/>

</RelativeLayout>